--- a/src/library.html
+++ b/src/library.html
@@ -10,14 +10,15 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="./sass/index.scss" />
-  <script type="module" src="./js/index.js"></script>
+  <script type="module" src="./js/library.js"></script>
+
 </head>
 
 <body>
   <!-- ❗️❗️❗️ Add partials like so for every page -->
-  <include src="./partials/header.html"></include>
+  <include src="./partials/header-lib.html"></include>
   <include src="./partials/main.html"></include>
-  <include src="./partials/pagination.html"></include>
+  <include src="./partials/pagination-lib.html"></include>
   <include src="./partials/footer.html"></include>
   <include src="./partials/modal-window.html"></include>
   <include src="./partials/footer-modal-window.html"></include>
